--- a/README
+++ b/README
@@ -16,6 +16,8 @@ Currently contains only a handful of files I've tidied up:
 
 -- an example plot from poll_read.py
 
+--------------------
+
 (4) Scots_independence_polls.xlsx
 
 -- an excel file with one sheet, containing all the polls on the question "Should
@@ -25,3 +27,21 @@ Currently contains only a handful of files I've tidied up:
 
 -- a python script for visualising how support for Scottish Independence has varied
    over time.
+
+---------------------
+
+(6) BES_2015_election_results.xlsx
+(7) hanretty_EU_ref_figs.xlsx
+(8) Westminster_Parliamentary_Constituencies_December_2016_Ultra_Generalised_Clipped_Boundaries_in_Great_Britain.geojson
+
+-- files containing: the British Electoral Survey collated election & demographic data for 2015, estimates for the
+   EU referendum result in each constituency, and the constituency boundaries and IDs in a .geojson file.
+
+(9) election_map_script.py
+
+-- script for making .html zoomable, colour-coded maps of constituency based data, currently written to produce such
+   a map for the EU referendum result (but this could easily be changed to plot e.g. demographic data.
+
+(10) referendum_map.html
+
+-- example output from election_map_script.py (can be viewed in your browser)
